--- a/css/product-detail.css
+++ b/css/product-detail.css
@@ -1,5 +1,6 @@
 body {
     animation: gradientShift 5s ease infinite;
+    font-family: 'Josefin Sans', sans-serif;
 }
 #product-details{
     margin-top: 5%;
@@ -13,7 +14,29 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
+#glitter-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 9999;
+}
 
+.glitter {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: radial-gradient(circle, rgb(244, 237, 245) 0%, rgba(255,255,255,0) 90%);
+    box-shadow: 0 0 10px rgba(251, 245, 245, 0.629);
+    opacity: 0;
+}
+
+h3{
+    font-size: x-large;
+}
 .product{
     margin-top: 5%;
     height: 60%;
@@ -40,7 +63,7 @@ body {
 /* Basic reset and body styling */
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+  
     background: #fff; /* White background */
     color: #333;
 }
@@ -140,8 +163,12 @@ button {
 
 .product-description {
     margin-bottom: 10px;
-    font-size: 1em;
+    font-size: 1.1rem;
+    font-weight: bold;
+    word-spacing: 0.2em; /* Adjust this value to increase or decrease the gap between words */
+    line-height: 1.6; /* Adjust line-height to create more space between lines of text */
 }
+
 
 .product-price {
     font-size: 1.2em;
