--- a/css/contact.css
+++ b/css/contact.css
@@ -50,8 +50,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 600px;
-    width: 100%;
+    max-width: 1500px;
 }
 
 form {
@@ -162,7 +161,11 @@ textarea:hover {
         transform: translateY(0);
     }
 }
-
+.cont{
+    display: flex;
+    width: 1000px;
+  
+}
 @keyframes fadeIn {
     from {
         opacity: 0;
