--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,20 @@ nav ul li a.active {
 h1 {
     font-family: 'Josefin Sans', sans-serif;
 }
-
+.butt{
+    background: linear-gradient(135deg, #7a34e2, #f9a1d3);
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    color: #431553;
+    font-size: 1.3rem;
+    width: 60%;
+    margin-left: 17%;
+    margin-bottom: 10px;
+    font-weight: bolder;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.3s ease;
+}
 
 .product-card a:hover {
     background: linear-gradient(135deg, #4a00e0, #8e2de2); /* Reverse gradient on hover */
@@ -271,7 +284,9 @@ form textarea {
     height: 150px;
     resize: vertical;
 }
-
+.bu{
+    margin-left: 17%;
+}
 form button {
     background: linear-gradient(135deg, #7a34e2, #f9a1d3);
     border: none;
@@ -280,7 +295,7 @@ form button {
     color: #431553;
     font-size: 1.3rem;
     width: 60%;
-    margin-left: 17%;
+   
     font-weight: bolder;
     cursor: pointer;
     transition: background 0.3s ease, transform 0.3s ease;
@@ -290,7 +305,9 @@ form button:hover {
    
     transform: scale(1.05);
 }
-
+.but:hover{
+    transform: scale(1.05);
+}
 #error-message {
     color: #e74c3c;
     font-size: 1em;
@@ -379,23 +396,194 @@ p {
 }
 
 .gallery-item {
-    min-width: 300px;
+    width:550px;
+    height:500px;
     flex-shrink: 0;
 }
 
 .gallery-item img {
-    width:550px;
-    height:500px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 10px;
     transition: transform 0.3s ease;
+}
+.gal{
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2), 0 2px 15px rgba(122, 52, 226, 0.8), 0 4px 30px rgba(122, 52, 226, 0.5);
+    border: none;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .gallery-item img:hover {
     transform: scale(1.05);
 }
-
+.wel{
+    margin-top:5%;
+    font-size: 4em;
+}
+.con{
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2), 0 2px 15px rgba(122, 52, 226, 0.8), 0 4px 30px rgba(122, 52, 226, 0.5);
+    border: none;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    font-size: 16px;
+    color: #6c2a69;
+    max-width: 550px;
+    margin-left: 10%;
+    padding-top: 3%;
+   
+}
 .gallery-item p {
     margin-top: 10px;
     font-size: 18px;
     font-weight: bold;
+}
+.cont{
+    display: flex;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+
+.footer {
+  position: absolute;
+margin-top: 15%;
+margin-bottom: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 1280px;
+  width: 95%;
+  background: #10182F;
+  border-radius: 6px;
+}
+
+.footer .footer-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 3.5rem;
+  padding: 60px;
+}
+
+.footer-row .footer-col h4 {
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+.footer-col .links {
+  margin-top: 20px;
+}
+
+.footer-col .links li {
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.footer-col .links li a {
+  text-decoration: none;
+  color: #bfbfbf;
+}
+
+.footer-col .links li a:hover {
+  color: #fff;
+}
+
+.footer-col p {
+  margin: 20px 0;
+  color: #bfbfbf;
+  max-width: 300px;
+}
+
+.footer-col form {
+  display: flex;
+  gap: 5px;
+}
+
+.footer-col input {
+  height: 40px;
+  border-radius: 6px;
+  background: none;
+  width: 100%;
+  outline: none;
+  border: 1px solid #7489C6 ;
+  caret-color: #fff;
+  color: #fff;
+  padding-left: 10px;
+}
+
+.footer-col input::placeholder {
+  color: #ccc;
+}
+
+ .footer-col form button {
+  background: #fff;
+  outline: none;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 500;
+  transition: 0.2s ease;
+}
+
+.footer-col form button:hover {
+  background: #cecccc;
+}
+
+.footer-col .icons {
+  display: flex;
+  margin-top: 30px;
+  gap: 30px;
+  cursor: pointer;
+}
+
+.footer-col .icons i {
+  color: #afb6c7;
+}
+
+.footer-col .icons i:hover  {
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    transform: none;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  .footer .footer-row {
+    padding: 20px;
+    gap: 1rem;
+  }
+
+  .footer-col form {
+    display: block;
+  }
+
+  .footer-col form :where(input, button) {
+    width: 100%;
+  }
+
+  .footer-col form button {
+    margin: 10px 0 0 0;
+  }
 }
